<?xml version="1.0" encoding="utf-8"?>
<com.sam.hex.startup.DashboardLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >
	    
    <Button
        android:id="@+id/startButton"
        style="@style/DashboardButton"
        android:text="@string/start"
        android:drawableTop="@drawable/start_drawable" />
    <Button
        android:id="@+id/instructionsButton"
        style="@style/DashboardButton"
        android:text="@string/rules"
        android:drawableTop="@drawable/rules_drawable" />

    <Button
        android:id="@+id/optionsButton"
        style="@style/DashboardButton"
        android:text="@string/options"
        android:drawableTop="@drawable/settings_drawable" />

</com.sam.hex.startup.DashboardLayout>